# gdnet

./: LICENSE.txt  README.md  pyproject.toml
benchmarks/: bench_fp8_gemm.py  bench_gated_causal_dwconv.py
configs/: training.yaml
experiments/copy_task/: CONCLUDE.md  dataset.py  run.py  run_rope.py  run_sin.py
experiments/grid/: train.py
experiments/retrieval/: CONCLUDE.md  cam.py  dataset.py  model.py  run.py  run_memory.py
experiments/retrieval_v2/: CONCLUDE.md  run.py
gdnet/: __init__.py  layer.py  loss.py  memory.py  model.py  operators.py
gdnet/data/: __init__.py  fineweb_edu.py  mixed.py  nemotron.py  packed.py
gdnet/kernel/fp8_linear/: __init__.py  gemm.py  linear.py  quantize.py
gdnet/kernel/fused_mem_read/: __init__.py  function.py  kernel.py
gdnet/kernel/gated_causal_depthwise_conv/: __init__.py  conv.py  function.py  gate_norm.py
gdnet/utils/: __init__.py  distributed.py  fp8.py  sp.py
kernel/gated_causal_depthwise_conv/: __init__.py  conv.py  function.py  gate_norm.py
scripts/: audit_copies.py  check-env.sh  check_abi.py  compare_partial_sn.py  compare_periodic_sn.py  fp8_profile.py  plot_sn_sigma_drift.py  prepare_data.py  profile_full_model.py  profile_fused_mem_read.py  profile_gate_w2_bwd.py  profile_layer_bwd.py  run.py  test_symm_mem.py  throughput.py  training.py
src/: layer.py  loss.py  model.py  operators.py
tests/: test_fp8_gemm.py  test_fp8_linear.py  test_fp8_quantize.py  test_fused_mem_read.py  test_gated_causal_dwconv.py  test_layer.py
