[project]
name = "gdnet"
version = "0.1.0"
description = "Reference implementation and utilities for GDNet"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nvidia-ml-py>=13.595.45",
    "rich>=15.0.0",
    "torch==2.8.0",
    "transformer-engine[core,torch]>=2.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "triton==3.4.0",
    "nvidia-cutlass-dsl>=4.5.0",
    "pytest>=9.0.3",
    "pyperf>=2.10.0",
    "matplotlib>=3.10.9",
    "modal>=1.4.2",
]
