[project]
name = "gdnet"
version = "0.1.0"
description = "Reference implementation and utilities for GDNet"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.8.5",
    "nvidia-ml-py==13.595.45",
    "pyyaml>=6.0",
    "rich==15.0.0",
    "tiktoken>=0.13.0",
    "watchfiles>=1.0",
    "torch==2.11.0",
    "torchao==0.17.0",
    "nvidia-cutlass-dsl>=4.5.1",
    "modal>=1.4.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchao = { index = "pytorch-cu128" }
triton = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "triton==3.6.0",
    "pytest==9.0.3",
    "pyperf==2.10.0",
    "matplotlib==3.10.9",
]
